Pending changes in the mainline
===============================



Version 1.0 (2020-12-02)
========================

* Initial release